# image32

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  FUTURE_es  LICENSE  README.md
cmake/: AddExample.cmake  CheckIfDefined.cmake
examples/: CMakeLists.txt  example.cpp  write.cpp
include/: image.h  image32.h  io.h  io_bmp.h  io_jpeg.h  io_none.h  io_png.h  io_webp.h
include/image32/: _encoder_options.h  _image.h  color.h  color_info.h  color_type.h  config.h  encoder.h  encoder_options.h  image.h  image32.h  image_buffer.h  image_error.h  image_info.h  io.h  palette.h  result.h
include/image32/codec/: image_codec.h
include/image32/file/: file_format.h  file_handle.h
src/: CMakeLists.txt  _image.cpp  _io_bmp.cpp  _io_jpeg.cpp  _io_png.cpp  color_info.cpp  file.cpp  file.h  image.cpp  image.h  image_buffer.cpp  image_info.cpp  image_priv.h  io.cpp  io.h  io_bmp.cpp  io_bmp.h  io_jpeg.cpp  io_jpeg.h  io_none.cpp  io_none.h  io_png.cpp  io_png.h  io_priv.h  io_webp.cpp  main.cpp  palette.cpp  result.cpp  string.cpp  string.h  time.h
src/codec/: bmp_decoder.cpp  bmp_decoder.h  image_codec.cpp  image_decoder.cpp  image_decoder.h  jpeg_decoder.cpp  jpeg_decoder.h  libbmp.cpp  libbmp.h  png_decoder.cpp  png_decoder.h  unknown_decoder.h
src/file/: file.cpp  file.h  file_handle.cpp
